tests/activitygen/errors/passenger_disallowed/routes.activitygen
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2022-08-29 13:50:37 by Eclipse SUMO activitygen Version v1_14_1+0638-0a2b671
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
This file may also be made available under the following Secondary
Licenses when the conditions for such availability set forth in the Eclipse
Public License 2.0 are satisfied: GNU General Public License, version 2
or later which is available at
https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-or-later
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/activitygenConfiguration.xsd">

    <input>
        <net-file value="activitygen-example.net.xml"/>
        <stat-file value="activitygen-example.stat.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <output-file value="routes.activitygen"/>
    </output>

    <report>
        <xml-validation value="never"/>
    </report>

    <random_number>
        <seed value="1"/>
    </random_number>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
</routes>
